--- a/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_command_config.xml
@@ -131,8 +131,9 @@
                     <EditText
                         android:inputType="number"
                         android:id="@+id/speed"
+                        android:textColor="@color/black"
+                        android:gravity="center"
                         android:layout_width="match_parent"
-                        android:gravity="right"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -165,7 +166,8 @@
                         android:id="@+id/mp3"
                         android:inputType="number"
                         android:layout_width="match_parent"
-                        android:gravity="right"
+                        android:textColor="@color/black"
+                        android:gravity="center"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -197,8 +199,9 @@
                     <EditText
                         android:id="@+id/outime"
                         android:inputType="number"
+                        android:textColor="@color/black"
                         android:layout_width="match_parent"
-                        android:gravity="right"
+                        android:gravity="center"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -230,8 +233,9 @@
                     <EditText
                         android:inputType="number"
                         android:id="@+id/shownum"
+                        android:textColor="@color/black"
                         android:layout_width="match_parent"
-                        android:gravity="right"
+                        android:gravity="center"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
@@ -264,7 +268,8 @@
                         android:inputType="number"
                         android:id="@+id/showcolor"
                         android:layout_width="match_parent"
-                        android:gravity="right"
+                        android:textColor="@color/black"
+                        android:gravity="center"
                         android:layout_height="match_parent"/>
                 </LinearLayout>
             </LinearLayout>
