--- a/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,9 @@
             />
     </RelativeLayout>
     <LinearLayout
-        android:layout_below="@+id/main"
         android:id="@+id/linear_robot"
+        android:layout_toRightOf="@+id/map_right_Ralative"
+        android:layout_below="@+id/main"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="100dp">
@@ -40,6 +41,7 @@
             android:layout_height="match_parent"
             >
             <LinearLayout
+                android:id="@+id/linear_robot1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
@@ -55,12 +57,14 @@
         </HorizontalScrollView>
     </LinearLayout>
     <View
+        android:layout_toRightOf="@+id/map_right_Ralative"
         android:layout_below="@+id/linear_robot"
         android:id="@+id/view"
         android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"/>
     <LinearLayout
+        android:layout_toRightOf="@+id/map_right_Ralative"
         android:id="@+id/linear_desk"
         android:layout_below="@+id/view"
         android:orientation="vertical"
@@ -99,6 +103,7 @@
             android:id="@+id/gview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:numColumns="auto_fit"
             android:columnWidth="80dp"
             android:stretchMode="columnWidth"
@@ -114,7 +119,6 @@
         <LinearLayout
             android:id="@+id/linearlayout_all"
             android:layout_width="100dp"
-            android:visibility="gone"
             android:layout_alignParentLeft="true"
             android:orientation="vertical"
             android:background="@mipmap/bg"
