--- a/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
@@ -59,6 +59,7 @@
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:textSize="25sp"
+                    android:gravity="center"
                     android:textColor="@color/black"
                     android:layout_height="match_parent"
                     />
