--- a/LaserRadar/Robot/app/src/main/res/layout/activity_areaconfig.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_areaconfig.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical"
     android:background="#EEEEEE"
     >
-
     <RelativeLayout
         android:id="@+id/main"
         android:background="@color/green"
@@ -52,6 +51,6 @@
         android:background="@color/white"
         android:layout_margin="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
