--- a/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
@@ -47,69 +47,73 @@
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
+        android:layout_marginLeft="10dp"
         android:layout_height="1dp"/>
     <LinearLayout
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:background="@color/white"
-        android:layout_height="53dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/name"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:background="@color/white"
-            android:textColor="#333333"
-            android:textSize="15sp"
-            android:id="@+id/textView2" />
-
-        <EditText
-            android:id="@+id/cardname"
+        android:layout_height="107dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/add_card"
-            android:gravity="left|center_vertical"
-            android:layout_marginLeft="13dp"
             android:background="@color/white"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            />
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+            android:layout_height="53dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/name"
+                android:layout_marginLeft="10dp"
+                android:gravity="center_vertical"
+                android:background="@color/white"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:id="@+id/textView2" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:layout_height="53dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/card_address"
-            android:layout_marginLeft="10dp"
-            android:textColor="#333333"
-            android:background="@color/white"
-            android:gravity="center_vertical"
-            android:textSize="15sp"
-            />
-        <EditText
-            android:id="@+id/cardaddress"
+            <EditText
+                android:id="@+id/cardname"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/add_card"
+                android:gravity="left|center_vertical"
+                android:layout_marginLeft="13dp"
+                android:background="@color/white"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                />
+        </LinearLayout>
+        <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
+            android:background="#EEEEEE"
+            android:layout_height="1dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:background="@color/white"
-            android:inputType="number"
-            android:layout_marginLeft="13dp"
-            android:textSize="15sp"
-            android:gravity="left|center_vertical"
-            />
+            android:orientation="horizontal"
+            android:layout_height="53dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/card_address"
+                android:layout_marginLeft="10dp"
+                android:textColor="#333333"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:textSize="15sp"
+                />
+            <EditText
+                android:id="@+id/cardaddress"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/black"
+                android:background="@color/white"
+                android:inputType="number"
+                android:layout_marginLeft="13dp"
+                android:textSize="15sp"
+                android:gravity="left|center_vertical"
+                />
+        </LinearLayout>
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
     <LinearLayout
         android:layout_marginTop="53dp"
         android:layout_width="match_parent"
@@ -124,7 +128,5 @@
             android:textSize="17sp"
             android:background="@animator/btn_sure_selector"
             android:layout_height="46dp" />
-
-
     </LinearLayout>
 </LinearLayout>
