--- a/LaserRadar/Robot/app/src/main/res/layout/fragment_robot_dialog.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/fragment_robot_dialog.xml
@@ -23,8 +23,8 @@
 
                 <Button
                     android:id="@+id/positiveButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:background="@null"
                     android:textColor="#FFFFFF"
@@ -36,11 +36,11 @@
                     />
                 <Button
                     android:id="@+id/negativeButton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="40dp"
                     android:background="@null"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="@string/btn_cancle"
                     android:textColor="#FFFFFF"
                     android:textSize="13sp"
@@ -53,10 +53,10 @@
                     android:gravity="center"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
+                    android:id="@+id/textView8"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:id="@+id/textView8" />
+                    android:layout_alignParentStart="true" />
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
