--- a/LaserRadar/RobotClientUdp/app/src/main/res/drawable/btn_add_selector.xml
+++ b/LaserRadar/RobotClientUdp/app/src/main/res/drawable/btn_add_selector.xml
@@ -2,6 +2,6 @@
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@mipmap/tianjia_pre" />
-    <item android:drawable="@mipmap/tianjia_no" />
+        android:drawable="@mipmap/tj_pre" />
+    <item android:drawable="@mipmap/tj_no" />
 </selector>
