--- a/sjx/OrderDishes/app/src/main/res/layout/activity_footmenu.xml
+++ b/sjx/OrderDishes/app/src/main/res/layout/activity_footmenu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/relayout"
     android:background="#EEEEEE"
    >
     <RelativeLayout
@@ -44,16 +44,58 @@
             android:layout_height="23dp"
             />
     </RelativeLayout>
-    <GridView
-        android:id="@+id/food"
+    <RelativeLayout
+        android:layout_below="@+id/main"
+        android:layout_above="@+id/bottom"
+        android:id="@+id/midi"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:columnWidth="109dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/white"
-        android:divider="#EEEEEE"
-        android:dividerHeight="1dp"
-        android:numColumns="auto_fit"/>
-</LinearLayout>
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="80dp" />
+        <TextView
+            android:id="@+id/tv_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circle_bg"
+            android:gravity="center"
+            android:text="A"
+            android:textColor="#ffffff"
+            android:textSize="26sp"
+            android:visibility="gone" />
+
+        <com.example.carl.orderdishes.view.IndexView
+            android:id="@+id/indexView"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/bottom"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="60dp">
+        <ImageView
+            android:id="@+id/shownumber"
+            android:layout_width="60dp"
+            android:layout_marginLeft="10dp"
+            android:background="@mipmap/ic_launcher"
+            android:layout_height="match_parent" />
+        <TextView
+            android:layout_toRightOf="@+id/shownumber"
+            android:id="@+id/total"
+            android:gravity="center"
+            android:textSize="17sp"
+            android:text="$15.13"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            />
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
+</RelativeLayout>
