--- a/sjx/OrderDishes/app/src/main/res/layout/food_item.xml
+++ b/sjx/OrderDishes/app/src/main/res/layout/food_item.xml
@@ -1,67 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="106dp"
-    android:layout_height="106dp"
+    android:layout_width="260dp"
+    android:layout_height="80dp"
     android:background="@color/white"
-    android:gravity="center"
-    android:orientation="vertical">
-
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left|center"
+        />
     <RelativeLayout
-        android:layout_width="106dp"
-        android:layout_height="106dp">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#EEEEEE" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:background="#EEEEEE" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:background="#EEEEEE" />
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_centerInParent="true" />
-
+        android:layout_width="120dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/name"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_centerInParent="true"
-            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
             android:textColor="#666666"
-            android:textSize="25sp" />
-
+            android:textSize="15sp" />
         <TextView
             android:id="@+id/state"
-            android:layout_below="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="111"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_alignParentBottom="true"
             android:textColor="#666666"
             android:textSize="12sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/add_food"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@mipmap/ic_launcher"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:background="#EEEEEE" />
-
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_marginRight="10dp"
+            />
     </RelativeLayout>
 </LinearLayout>
