--- a/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
+++ b/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
@@ -2,7 +2,10 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
+    android:focusable="true"
     >
+
     <LinearLayout
         android:id="@+id/background"
         android:layout_width="match_parent"
@@ -262,21 +265,55 @@
         android:id="@+id/layout_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
+        >
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
             android:layout_height="match_parent">
-            <GridView
-                android:id="@+id/all_content"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:numColumns="7"
-                />
-        </LinearLayout>
+                android:layout_height="match_parent">
+                <GridView
+                    android:id="@+id/all_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:numColumns="7" />
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_alignParentRight="true"
+                android:layout_width="120dp"
+                android:layout_marginRight="20dp"
+                android:id="@+id/admin_layout"
+                android:layout_height="80dp">
+                <RelativeLayout
+                    android:id="@+id/admin_relative"
+                    android:layout_width="match_parent"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/btn_show"
+                    android:layout_height="40dp">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_height="30dp"
+                        android:layout_centerVertical="true"
+                        android:background="@mipmap/admin"
+                        />
+                    <Button
+                        android:id="@+id/admin"
+                        android:text="admin"
+                        android:layout_width="80dp"
+                        android:background="@null"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/white"
+                        android:layout_alignParentRight="true"
+                        android:layout_height="40dp" />
+                </RelativeLayout>
+            </RelativeLayout>
+        </RelativeLayout>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/layout_video"
