--- a/MyLauncherWeb/app/src/main/res/layout/gridview_item_main.xml
+++ b/MyLauncherWeb/app/src/main/res/layout/gridview_item_main.xml
@@ -15,6 +15,16 @@
             android:layout_gravity="center"
             android:layout_height="100dp"
             />
+        <ImageView
+            android:id="@+id/delete"
+            android:layout_width="40dp"
+            android:layout_alignParentTop="true"
+            android:background="@mipmap/delete"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="40dp"
+            />
         <TextView
             android:id="@+id/text"
             android:layout_width="match_parent"
