--- a/MyLauncherWeb/app/src/main/res/values/styles.xml
+++ b/MyLauncherWeb/app/src/main/res/values/styles.xml
@@ -936,4 +936,14 @@
         <item name="android:windowExitAnimation">@anim/dialog_enter_anim</item>
     </style>
 
+    <style name="SoundRecorder" parent="android:style/Theme.Dialog">
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <!--<sjx_item name="android:backgroundDimEnabled">true</sjx_item>-->
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
