--- a/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
+++ b/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
@@ -276,7 +276,6 @@
                 android:layout_height="match_parent">
                 <GridView
                     android:id="@+id/all_content"
-                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -285,7 +284,7 @@
             </LinearLayout>
             <RelativeLayout
                 android:layout_alignParentRight="true"
-                android:layout_width="120dp"
+                android:layout_width="160dp"
                 android:layout_marginRight="20dp"
                 android:id="@+id/admin_layout"
                 android:layout_height="80dp">
@@ -304,8 +303,8 @@
                         />
                     <Button
                         android:id="@+id/admin"
-                        android:text="admin"
-                        android:layout_width="80dp"
+                        android:text="DO!T Admin"
+                        android:layout_width="120dp"
                         android:background="@null"
                         android:layout_centerVertical="true"
                         android:textColor="@color/white"
