--- a/Ijkplayer/app/src/main/res/layout/activity_player.xml
+++ b/Ijkplayer/app/src/main/res/layout/activity_player.xml
@@ -1,8 +1,6 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".PlayerActivity"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,7 +15,7 @@
             android:id="@+id/video_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"></tv.danmaku.ijk.media.sample.widget.media.IjkVideoView>
+            android:layout_gravity="center"/>
 
         <TextView
             android:id="@+id/toast_text_view"
@@ -37,14 +35,11 @@
             android:background="@color/ijk_transparent_dark"
             android:padding="8dp" />
 
-        <android.support.v7.widget.Toolbar
+        <Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/ijk_transparent_dark"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             tools:context=".toolbar_widget" />
     </FrameLayout>
 
