--- a/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
+++ b/MyLauncherWeb/app/src/main/res/layout/activity_first.xml
@@ -309,6 +309,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
+                        android:scrollbars="none"
                         android:gravity="center"
                         android:numColumns="6" />
                 </LinearLayout>
