--- a/cultraview/VirtualKey/whiteboardlib/src/main/res/drawable/seekbar_define_color_style.xml
+++ b/cultraview/VirtualKey/whiteboardlib/src/main/res/drawable/seekbar_define_color_style.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>     
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@android:id/background"
-          android:drawable="@drawable/abc_scrubber_primary_mtrl_alpha"/>
-    <item android:id="@android:id/secondaryProgress">
-        <scale android:scaleWidth="100%">
-            <selector>
-                <item android:state_enabled="false">
-                    <color android:color="@android:color/transparent"/>
-                </item>
-                <item android:drawable="@drawable/track_bg"/>
-            </selector>
-        </scale>
+    <item
+        android:id="@android:id/background"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp">
+        <shape>
+            <solid android:color="#FFFFFF"/>
+        </shape>
     </item>
+
     <item android:id="@android:id/progress">
-        <scale android:scaleWidth="100%">
-            <selector>
-                <item android:state_enabled="false">
-                    <color android:color="@android:color/transparent"/>
-                </item>
-                <item android:drawable="@drawable/track_bg"/>
-            </selector>
-        </scale>
+        <clip>
+            <shape>
+                <gradient
+                    android:startColor="#2297ce"
+                    android:centerColor="#2297ce"
+                    android:endColor="#2297ce"
+                    />
+            </shape>
+        </clip>
     </item>
 </layer-list>
