--- a/cultraview/VirtualKey/whiteboardlib/src/main/res/drawable/seekbar_thumb.xml
+++ b/cultraview/VirtualKey/whiteboardlib/src/main/res/drawable/seekbar_thumb.xml
@@ -1,20 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:state_pressed="true">
-        <bitmap android:src="@drawable/thumb_default"
-                android:gravity="center"/>
-    </item>
-    <item android:state_enabled="false">
-        <bitmap android:src="@drawable/thumb_default"
-                android:gravity="center"/>
-    </item>
-    <item android:state_pressed="true">
-        <bitmap android:src="@drawable/thumb_default"
-                android:gravity="center"/>
-    </item>
-    <item>
-        <bitmap android:src="@drawable/thumb_default"
-                android:gravity="center"/>
-    </item>
-		
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval"
+    android:useLevel="true">
+
+    <size
+        android:width="20px"
+        android:height="20px" />
+    <solid android:color="#2297CE" />
+</shape>
