--- a/cultraview/VirtualKey/whiteboardlib/src/main/res/layout/right_btn_menu.xml
+++ b/cultraview/VirtualKey/whiteboardlib/src/main/res/layout/right_btn_menu.xml
@@ -1,29 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/root_right_menu"
-                android:layout_width="78px"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="0dp"
-                android:layout_margin="0dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_right_menu"
+    android:layout_width="62px"
+    android:layout_height="wrap_content"
+    android:layout_margin="0dp"
+    android:orientation="vertical"
+    android:padding="0dp">
     <!--android:background="@drawable/btn_menu_bg_shape">-->
 
     <!-- 箭头按钮 -->
     <RelativeLayout
         android:id="@+id/rl_btn_arrow"
         android:layout_width="match_parent"
-        android:layout_height="67px"
-        android:background="@drawable/shape_all"
-        android:padding="0dp"
+        android:layout_height="54px"
         android:layout_margin="0dp"
-        >
+        android:background="@drawable/shape_all"
+        android:padding="0dp">
+
         <ImageView
             android:id="@+id/btn_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:layout_width="40px"
+            android:layout_height="40px"
             android:layout_centerInParent="true"
-            android:src="@drawable/btn_arrow_left_normal"/>
+            android:src="@drawable/btn_arrow_left_normal"
+            android:visibility="visible" />
         <!--<ImageView
             android:id="@+id/btn_arrow_shrink"
             android:layout_width="20dp"
@@ -38,23 +38,23 @@
     <!-- 菜单按钮项 -->
     <RelativeLayout
         android:id="@+id/menu_layout"
-        android:layout_below="@+id/rl_btn_arrow"
         android:layout_width="match_parent"
-        android:layout_height="415px"
-        android:orientation="vertical"
-        android:visibility="gone"
+        android:layout_height="332px"
+        android:layout_below="@+id/rl_btn_arrow"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8px"
+        android:layout_marginTop="7px"
+        android:background="@drawable/shape_all"
+        android:orientation="vertical"
         android:padding="0dp"
-        android:background="@drawable/shape_all">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/btn_back"
-            android:layout_width="38px"
-            android:layout_height="38px"
+            android:layout_width="30px"
+            android:layout_height="30px"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="26px"
-            android:src="@drawable/btn_right_back_normal"/>
+            android:layout_marginTop="21px"
+            android:src="@drawable/btn_right_back_normal" />
 
         <!--<RelativeLayout
             android:id="@+id/rl_btn_back"
@@ -76,12 +76,12 @@
 
         <ImageView
             android:id="@+id/btn_home"
-            android:layout_width="38px"
-            android:layout_height="38px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="26px"
+            android:layout_width="30px"
+            android:layout_height="30px"
             android:layout_below="@id/btn_back"
-            android:src="@drawable/btn_home_normal"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21px"
+            android:src="@drawable/btn_home_normal" />
 
         <!--        <RelativeLayout
                     android:id="@+id/rl_btn_app_switch"
@@ -94,12 +94,12 @@
 
         <ImageView
             android:id="@+id/btn_app_switch"
-            android:layout_width="38px"
-            android:layout_height="38px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="26px"
+            android:layout_width="30px"
+            android:layout_height="30px"
             android:layout_below="@id/btn_home"
-            android:src="@drawable/btn_app_switch_normal"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21px"
+            android:src="@drawable/btn_app_switch_normal" />
 
         <!--        <RelativeLayout
                     android:id="@+id/rl_btn_whiteboard"
@@ -112,12 +112,12 @@
 
         <ImageView
             android:id="@+id/btn_whiteboard"
-            android:layout_width="38px"
-            android:layout_height="38px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="26px"
+            android:layout_width="30px"
+            android:layout_height="30px"
             android:layout_below="@id/btn_app_switch"
-            android:src="@drawable/btn_pan_normal"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21px"
+            android:src="@drawable/btn_pan_normal" />
 
         <!--        <RelativeLayout
                     android:id="@+id/rl_btn_show_setting"
@@ -130,12 +130,12 @@
 
         <ImageView
             android:id="@+id/btn_show_setting"
-            android:layout_width="38px"
-            android:layout_height="38px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="26px"
+            android:layout_width="30px"
+            android:layout_height="30px"
             android:layout_below="@id/btn_whiteboard"
-            android:src="@drawable/btn_setting_normal"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21px"
+            android:src="@drawable/btn_setting_normal" />
 
         <!--        <RelativeLayout
                     android:id="@+id/rl_btn_signal"
@@ -148,12 +148,12 @@
 
         <ImageView
             android:id="@+id/btn_signal"
-            android:layout_width="38px"
-            android:layout_height="38px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="26px"
+            android:layout_width="30px"
+            android:layout_height="30px"
             android:layout_below="@id/btn_show_setting"
-            android:src="@drawable/btn_signal_normal"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="21px"
+            android:src="@drawable/btn_signal_normal" />
     </RelativeLayout>
 
 </RelativeLayout>
